Slider Page Completed

--- a/index.html
+++ b/index.html
@@ -27,25 +27,74 @@
         <h1>Your Fancy Heading</h1>
         <p>Your captivating subheading goes here. Make it inspiring!</p>
       </div>
+      <audio
+        id="background-music"
+        src="./assets/song.m4a"
+        preload="auto"
+      ></audio>
     </section>
 
     <!-- Horizontal Sliding Image Section -->
     <section class="image-slider-container">
       <div class="image-slider">
         <div class="slides">
-          <div class="slide" style="background-image: url('./assets/hero.jpg')"></div>
-          <div class="slide" style="background-image: url('./assets/hero1.jpg')"></div>
-          <div class="slide" style="background-image: url('./assets/hero.jpg')"></div>
-          <div class="slide" style="background-image: url('./assets/hero.jpg')"></div>
+          <div
+            class="slide"
+            style="background-image: url('./assets/hero.jpg')"
+          ></div>
+          <div
+            class="slide"
+            style="background-image: url('./assets/hero1.jpg')"
+          ></div>
+          <div
+            class="slide"
+            style="background-image: url('./assets/hero.jpg')"
+          ></div>
+          <div
+            class="slide"
+            style="background-image: url('./assets/hero.jpg')"
+          ></div>
         </div>
       </div>
-    
+
       <div class="image-slider second-slider">
         <div class="slides">
-          <div class="slide" style="background-image: url('./assets/hero.jpg')"></div>
-          <div class="slide" style="background-image: url('./assets/hero1.jpg')"></div>
-          <div class="slide" style="background-image: url('./assets/hero.jpg')"></div>
-          <div class="slide" style="background-image: url('./assets/hero.jpg')"></div>
+          <div
+            class="slide"
+            style="background-image: url('./assets/hero.jpg')"
+          ></div>
+          <div
+            class="slide"
+            style="background-image: url('./assets/hero1.jpg')"
+          ></div>
+          <div
+            class="slide"
+            style="background-image: url('./assets/hero.jpg')"
+          ></div>
+          <div
+            class="slide"
+            style="background-image: url('./assets/hero.jpg')"
+          ></div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Story Section One Container -->
+    <section class="story-section-one">
+      <div class="story-section-container">
+        <h1 class="story-section-title">Your Title Here</h1>
+        <div class="story-content">
+          <div class="image-container">
+            <img src="./assets/hero1.jpg" alt="Image 1" class="angled-image" />
+            <img src="./assets/hero3.jpg" alt="Image 2" class="stacked-image" />
+          </div>
+          <div class="note-section">
+            <h3>Notes</h3>
+            <p>
+              Your notes go here. You can add any text or information you want
+              to include in this section.
+            </p>
+          </div>
         </div>
       </div>
     </section>
