Mobile Resposibe for image slider

--- a/index.html
+++ b/index.html
@@ -55,11 +55,75 @@
             class="slide"
             style="background-image: url('./assets/hero.jpg')"
           ></div>
+          <div
+            class="slide"
+            style="background-image: url('./assets/hero.jpg')"
+          ></div>
+          <div
+            class="slide"
+            style="background-image: url('./assets/hero1.jpg')"
+          ></div>
+          <div
+            class="slide"
+            style="background-image: url('./assets/hero.jpg')"
+          ></div>
+          <div
+            class="slide"
+            style="background-image: url('./assets/hero.jpg')"
+          ></div>
+          <div
+            class="slide"
+            style="background-image: url('./assets/hero.jpg')"
+          ></div>
+          <div
+            class="slide"
+            style="background-image: url('./assets/hero1.jpg')"
+          ></div>
+          <div
+            class="slide"
+            style="background-image: url('./assets/hero.jpg')"
+          ></div>
+          <div
+            class="slide"
+            style="background-image: url('./assets/hero.jpg')"
+          ></div>
         </div>
       </div>
 
       <div class="image-slider second-slider">
         <div class="slides">
+          <div
+            class="slide"
+            style="background-image: url('./assets/hero.jpg')"
+          ></div>
+          <div
+            class="slide"
+            style="background-image: url('./assets/hero1.jpg')"
+          ></div>
+          <div
+            class="slide"
+            style="background-image: url('./assets/hero.jpg')"
+          ></div>
+          <div
+            class="slide"
+            style="background-image: url('./assets/hero.jpg')"
+          ></div>
+          <div
+            class="slide"
+            style="background-image: url('./assets/hero.jpg')"
+          ></div>
+          <div
+            class="slide"
+            style="background-image: url('./assets/hero1.jpg')"
+          ></div>
+          <div
+            class="slide"
+            style="background-image: url('./assets/hero.jpg')"
+          ></div>
+          <div
+            class="slide"
+            style="background-image: url('./assets/hero.jpg')"
+          ></div>
           <div
             class="slide"
             style="background-image: url('./assets/hero.jpg')"
@@ -87,7 +151,7 @@
         <div class="story-content">
           <div class="image-container">
             <img src="./assets/hero1.jpg" alt="Image 1" class="angled-image" />
-            <img src="./assets/hero3.jpg" alt="Image 2" class="stacked-image" />
+            <img src="./assets/hero4.jpg" alt="Image 2" class="stacked-image" />
           </div>
           <div class="note-section">
             <h3>Notes</h3>
