--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <section class="hero">
       <nav class="navbar">
         <div class="logo">
-          <img src="./assets/ashaya_logo.JPG" alt="Left Logo" />
+          <img src="./assets/ashayaLogo.JPG" alt="Left Logo" />
         </div>
         <ul class="nav-links">
           <li><a href="#">Home</a></li>
@@ -21,7 +21,7 @@
           <li><a href="#">Contact</a></li>
         </ul>
         <div class="logo">
-          <img src="./assets/sabu_logo.jpg" alt="Right Logo" />
+          <img src="./assets/sabuLogo.jpg" alt="Right Logo" />
         </div>
       </nav>
       <div class="hero-content">
@@ -151,7 +151,7 @@
         <div class="story-content">
           <div class="image-container">
             <img src="./assets/hero1.jpg" alt="Image 1" class="angled-image" />
-            <img src="./assets/hero4.jpg" alt="Image 2" class="stacked-image" />
+            <!-- <img src="./assets/hero4.jpg" alt="Image 2" class="stacked-image" /> -->
           </div>
           <div class="note-section">
             <h3>Notes</h3>
@@ -163,6 +163,118 @@
         </div>
       </div>
     </section>
+
+    <!-- TimeLine Section -->
+    <section class="timeline-section">
+      <h1 class="timeline-section-title">Journey</h1>
+      <div class="timeline">
+        <!-- Event 1 -->
+        <div class="timeline-node left">
+          <div class="content">
+            <img src="./assets/hero.jpg" alt="Event 1" class="node-image" />
+            <div class="description">
+              <h3>Event 1</h3>
+              <p>
+                Description of the first event. This is an important milestone
+                in the timeline.
+              </p>
+            </div>
+          </div>
+        </div>
+        <!-- Event 2 -->
+        <div class="timeline-node right">
+          <div class="content">
+            <img src="./assets/image2.jpg" alt="Event 2" class="node-image" />
+            <div class="description">
+              <h3>Event 2</h3>
+              <p>
+                Details about the second event. Another key point in the
+                timeline.
+              </p>
+            </div>
+          </div>
+        </div>
+        <!-- Event 3 -->
+        <div class="timeline-node left">
+          <div class="content">
+            <img src="./assets/image3.jpg" alt="Event 3" class="node-image" />
+            <div class="description">
+              <h3>Event 3</h3>
+              <p>
+                Highlights of the third event. A notable achievement worth
+                mentioning.
+              </p>
+            </div>
+          </div>
+        </div>
+        <!-- Event 4 -->
+        <div class="timeline-node right">
+          <div class="content">
+            <img src="./assets/image4.jpg" alt="Event 4" class="node-image" />
+            <div class="description">
+              <h3>Event 4</h3>
+              <p>
+                The fourth event brings additional details about the timeline.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer">
+      <div class="footer-container">
+        <!-- About Section -->
+        <div class="footer-section about">
+          <h3>About Us</h3>
+          <p>
+            We are committed to delivering exceptional experiences through our
+            services and ensuring customer satisfaction with every interaction.
+          </p>
+        </div>
+
+        <!-- Links Section -->
+        <div class="footer-section links">
+          <h3>Quick Links</h3>
+          <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </div>
+
+        <!-- Contact Section -->
+        <div class="footer-section contact">
+          <h3>Contact Us</h3>
+          <p>
+            <i class="fas fa-map-marker-alt"></i> 1234 Main St, City, Country
+          </p>
+          <p><i class="fas fa-phone"></i> +1 (123) 456-7890</p>
+          <p><i class="fas fa-envelope"></i> info@example.com</p>
+        </div>
+      </div>
+
+      <!-- Footer Bottom -->
+      <div class="footer-bottom">
+        <p>&copy; 2024 Your Company Name. All rights reserved.</p>
+        <ul class="social-icons">
+          <li>
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+          </li>
+        </ul>
+      </div>
+    </footer>
 
     <script src="script.js"></script>
   </body>
