--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
       <div class="hero-content">
         <h1>Your Fancy Heading</h1>
         <p>Your captivating subheading goes here. Make it inspiring!</p>
+        <div class="hero-btn">
+          <button>GitHub</button>
+          <button>Facebook</button>
+        </div>
       </div>
       <audio
         id="background-music"
