--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
         </div>
         <ul class="nav-links">
           <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Services</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="#">Slides</a></li>
+          <li><a href="#">HighLight</a></li>
+          <li><a href="#">Journey</a></li>
         </ul>
         <div class="logo">
           <img src="./assets/sabuLogo.jpg" alt="Right Logo" />
         </div>
       </nav>
       <div class="hero-content">
-        <h1>Your Fancy Heading</h1>
-        <p>Your captivating subheading goes here. Make it inspiring!</p>
+        <h1>The Story Of US</h1>
+        <p>The day I met you was no doubt the best day of my life. Happy since then and forever. </p>
         <div class="hero-btn">
           <button>GitHub</button>
           <button>Facebook</button>
@@ -43,53 +43,50 @@
     <section class="image-slider-container">
       <div class="image-slider">
         <div class="slides">
+          <div class="slide" style="background-image: url('./assets/')"></div>
           <div
             class="slide"
-            style="background-image: url('./assets/hero.jpg')"
+            style="background-image: url('./assets/us/1.HEIC')"
           ></div>
           <div
             class="slide"
-            style="background-image: url('./assets/hero1.jpg')"
+            style="background-image: url('./assets/us/2.HEIC')"
           ></div>
           <div
             class="slide"
-            style="background-image: url('./assets/hero.jpg')"
+            style="background-image: url('./assets/us/3.JPG')"
           ></div>
           <div
             class="slide"
-            style="background-image: url('./assets/hero.jpg')"
+            style="background-image: url('./assets/us/4.HEIC')"
           ></div>
           <div
             class="slide"
-            style="background-image: url('./assets/hero.jpg')"
+            style="background-image: url('./assets/us/5.JPG')"
           ></div>
           <div
             class="slide"
-            style="background-image: url('./assets/hero1.jpg')"
+            style="background-image: url('./assets/us/6.HEIC')"
           ></div>
           <div
             class="slide"
-            style="background-image: url('./assets/hero.jpg')"
+            style="background-image: url('./assets/us/7.JPG')"
           ></div>
           <div
             class="slide"
-            style="background-image: url('./assets/hero.jpg')"
+            style="background-image: url('./assets/us/8.JPG')"
           ></div>
           <div
             class="slide"
-            style="background-image: url('./assets/hero.jpg')"
+            style="background-image: url('./assets/us/9.HEIC')"
           ></div>
           <div
             class="slide"
-            style="background-image: url('./assets/hero1.jpg')"
+            style="background-image: url('./assets/us/10.HEIC')"
           ></div>
           <div
             class="slide"
-            style="background-image: url('./assets/hero.jpg')"
-          ></div>
-          <div
-            class="slide"
-            style="background-image: url('./assets/hero.jpg')"
+            style="background-image: url('./assets/us/11.HEIC')"
           ></div>
         </div>
       </div>
@@ -98,51 +95,51 @@
         <div class="slides">
           <div
             class="slide"
-            style="background-image: url('./assets/hero.jpg')"
+            style="background-image: url('./assets/us/24.JPG')"
           ></div>
           <div
             class="slide"
-            style="background-image: url('./assets/hero1.jpg')"
+            style="background-image: url('./assets/us/23.HEIC')"
           ></div>
           <div
             class="slide"
-            style="background-image: url('./assets/hero.jpg')"
+            style="background-image: url('./assets/us/22.JPG')"
           ></div>
           <div
             class="slide"
-            style="background-image: url('./assets/hero.jpg')"
+            style="background-image: url('./assets/us/21.HEIC')"
           ></div>
           <div
             class="slide"
-            style="background-image: url('./assets/hero.jpg')"
+            style="background-image: url('./assets/us/20.JPG')"
           ></div>
           <div
             class="slide"
-            style="background-image: url('./assets/hero1.jpg')"
+            style="background-image: url('./assets/us/19.JPG')"
           ></div>
           <div
             class="slide"
-            style="background-image: url('./assets/hero.jpg')"
+            style="background-image: url('./assets/us/18.HEIC')"
           ></div>
           <div
             class="slide"
-            style="background-image: url('./assets/hero.jpg')"
+            style="background-image: url('./assets/us/17.HEIC')"
           ></div>
           <div
             class="slide"
-            style="background-image: url('./assets/hero.jpg')"
+            style="background-image: url('./assets/us/16.JPG')"
           ></div>
           <div
             class="slide"
-            style="background-image: url('./assets/hero1.jpg')"
+            style="background-image: url('./assets/us/15.JPG')"
           ></div>
           <div
             class="slide"
-            style="background-image: url('./assets/hero.jpg')"
+            style="background-image: url('./assets/us/14.HEIC')"
           ></div>
           <div
             class="slide"
-            style="background-image: url('./assets/hero.jpg')"
+            style="background-image: url('./assets/us/13.HEIC')"
           ></div>
         </div>
       </div>
@@ -151,17 +148,16 @@
     <!-- Story Section One Container -->
     <section class="story-section-one">
       <div class="story-section-container">
-        <h1 class="story-section-title">Your Title Here</h1>
+        <h1 class="story-section-title">Today's HighLight</h1>
         <div class="story-content">
           <div class="image-container">
-            <img src="./assets/hero1.jpg" alt="Image 1" class="angled-image" />
+            <img src="./assets/she/birthday.HEIC" alt="Image 1" class="angled-image" />
             <!-- <img src="./assets/hero4.jpg" alt="Image 2" class="stacked-image" /> -->
           </div>
           <div class="note-section">
-            <h3>Notes</h3>
+            <h3>Happy BirthDay Wifey</h3>
             <p>
-              Your notes go here. You can add any text or information you want
-              to include in this section.
+              Wishing you the Happiest Birthday ever! Hami sangai na vaye ni we are always there for each other and that is the only thing that matters.
             </p>
           </div>
         </div>
@@ -175,12 +171,11 @@
         <!-- Event 1 -->
         <div class="timeline-node left">
           <div class="content">
-            <img src="./assets/hero.jpg" alt="Event 1" class="node-image" />
+            <img src="./assets/she/1.JPG" alt="Event 1" class="node-image" />
             <div class="description">
-              <h3>Event 1</h3>
+              <h3>Moment of Slay</h3>
               <p>
-                Description of the first event. This is an important milestone
-                in the timeline.
+                Ani esto photo pathyaesi manchhe piglera pani pani hudaina taw ani ?
               </p>
             </div>
           </div>
@@ -188,12 +183,11 @@
         <!-- Event 2 -->
         <div class="timeline-node right">
           <div class="content">
-            <img src="./assets/image2.jpg" alt="Event 2" class="node-image" />
+            <img src="./assets/she/2.JPG" alt="Event 2" class="node-image" />
             <div class="description">
-              <h3>Event 2</h3>
+              <h3>HAHA meri Hinata hai</h3>
               <p>
-                Details about the second event. Another key point in the
-                timeline.
+                The day you posted this on my request. That was freaking damn cute gesture. Idhar mei pigal gaya.
               </p>
             </div>
           </div>
@@ -201,12 +195,11 @@
         <!-- Event 3 -->
         <div class="timeline-node left">
           <div class="content">
-            <img src="./assets/image3.jpg" alt="Event 3" class="node-image" />
+            <img src="./assets/she/4.HEIC" alt="Event 3" class="node-image" />
             <div class="description">
-              <h3>Event 3</h3>
+              <h3>Cant Miss TaraGaun</h3>
               <p>
-                Highlights of the third event. A notable achievement worth
-                mentioning.
+                This was the destination for our dates. Rethinking and Blushing
               </p>
             </div>
           </div>
@@ -214,11 +207,11 @@
         <!-- Event 4 -->
         <div class="timeline-node right">
           <div class="content">
-            <img src="./assets/image4.jpg" alt="Event 4" class="node-image" />
+            <img src="./assets/she/5.JPG" alt="Event 4" class="node-image" />
             <div class="description">
-              <h3>Event 4</h3>
+              <h3>Cutiee</h3>
               <p>
-                The fourth event brings additional details about the timeline.
+                Ani jata gaye pani ramri huna chai xodna na huni hai? Kati ramri huna sakya k ?  
               </p>
             </div>
           </div>
