--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <section class="hero">
       <nav class="navbar">
         <div class="logo">
-          <img src="./assets/ashayaLogo.JPG" alt="Left Logo" />
+          <img src="./assets/us/ashayaLogo.jpg" alt="Left Logo" />
         </div>
         <ul class="nav-links">
           <li><a href="#">Home</a></li>
@@ -21,12 +21,15 @@
           <li><a href="#">Journey</a></li>
         </ul>
         <div class="logo">
-          <img src="./assets/sabuLogo.jpg" alt="Right Logo" />
+          <img src="./assets/us/sabuLogo.JPG" alt="Right Logo" />
         </div>
       </nav>
       <div class="hero-content">
         <h1>The Story Of US</h1>
-        <p>The day I met you was no doubt the best day of my life. Happy since then and forever. </p>
+        <p>
+          The day I met you was no doubt the best day of my life. Happy since
+          then and forever.
+        </p>
         <div class="hero-btn">
           <button>GitHub</button>
           <button>Facebook</button>
@@ -148,16 +151,22 @@
     <!-- Story Section One Container -->
     <section class="story-section-one">
       <div class="story-section-container">
-        <h1 class="story-section-title">Today's HighLight</h1>
+        <h1 class="story-section-title">Today's</h1>
         <div class="story-content">
           <div class="image-container">
-            <img src="./assets/she/birthday.HEIC" alt="Image 1" class="angled-image" />
+            <img
+              src="./assets/she/birthday.HEIC"
+              alt="Image 1"
+              class="angled-image"
+            />
             <!-- <img src="./assets/hero4.jpg" alt="Image 2" class="stacked-image" /> -->
           </div>
           <div class="note-section">
             <h3>Happy BirthDay Wifey</h3>
             <p>
-              Wishing you the Happiest Birthday ever! Hami sangai na vaye ni we are always there for each other and that is the only thing that matters.
+              Wishing you the Happiest Birthday ever! Hami sangai na vaye ni we
+              are always there for each other and that is the only thing that
+              matters.
             </p>
           </div>
         </div>
@@ -175,7 +184,8 @@
             <div class="description">
               <h3>Moment of Slay</h3>
               <p>
-                Ani esto photo pathyaesi manchhe piglera pani pani hudaina taw ani ?
+                Ani esto photo pathyaesi manchhe piglera pani pani hudaina taw
+                ani ?
               </p>
             </div>
           </div>
@@ -187,7 +197,8 @@
             <div class="description">
               <h3>HAHA meri Hinata hai</h3>
               <p>
-                The day you posted this on my request. That was freaking damn cute gesture. Idhar mei pigal gaya.
+                The day you posted this on my request. That was freaking damn
+                cute gesture. Idhar mei pigal gaya.
               </p>
             </div>
           </div>
@@ -211,7 +222,8 @@
             <div class="description">
               <h3>Cutiee</h3>
               <p>
-                Ani jata gaye pani ramri huna chai xodna na huni hai? Kati ramri huna sakya k ?  
+                Ani jata gaye pani ramri huna chai xodna na huni hai? Kati ramri
+                huna sakya k ?
               </p>
             </div>
           </div>
