--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
         </div>
       </nav>
       <div class="hero-content">
-        <h1>The Story Of US</h1>
+        <h1>THE STORY OF US</h1>
         <p>
           The day I met you was no doubt the best day of my life. Happy since
           then and forever.
         </p>
         <div class="hero-btn">
-          <button>GitHub</button>
+          <button onclick="showMessage()">Click Here</button>
           <button>Facebook</button>
         </div>
       </div>
@@ -166,7 +166,8 @@
             <p>
               Wishing you the Happiest Birthday ever! Hami sangai na vaye ni we
               are always there for each other and that is the only thing that
-              matters.
+              matters. You are the best thing that has ever happened to me. I
+              love you more and more and more golumolu Umamamama.
             </p>
           </div>
         </div>
